@@ -473,56 +473,50 @@ class ATCTFileContent(ATCTContent):
         """Validates upload file and id
         """
         id     = REQUEST.form.get('id')
-        parent = aq_parent(self)
-        parent_ids = parent.objectIds()
         field  = self.getPrimaryField()
         f_name = field.getName()
         upload = REQUEST.form.get('%s_file' % f_name, None)
         filename = getattr(upload, 'filename', None)
         clean_filename = cleanupFilename(filename, self.getCharset())
+        used_id = (id and not self._isIDAutoGenerated(id)) and id or clean_filename
 
         if upload:
             # the file may have already been read by a
             # former method
             upload.seek(0)
 
-        if not id and clean_filename == self.getId():
-            # already renamed - ok
+        if not used_id:
             return
-        elif id == self.getId():
-            # id available and already renamed
-            return
-        elif id and id not in parent_ids:
-            # id available and id not used
-            return
-        elif clean_filename in parent_ids or id in parent_ids:
-            # failure
-            used_id = id and id or clean_filename
-            errors[f_name] = 'You have to upload the file again'
-            errors['id'] = 'Id %s is already in use' % used_id
-            REQUEST.form['id'] = used_id
+
+        if getattr(self, 'check_id', None) is not None:
+            check_id = self.check_id(used_id,required=1)
         else:
-            # everything ok
-            pass
-        
+            # If check_id is not available just look for conflicting ids
+            check_id = used_id in self.aq_inner.aq_parent.objectIds() and 'Id %s conflicts with an existing item'%used_id or False
+        if check_id and used_id == id:
+            errors['id'] = check_id
+            REQUEST.form['id'] = used_id
+        elif check_id:
+            errors[f_name] = check_id
+
     security.declarePrivate('loadFileFromURL')
     def loadFileFromURL(self, url, contenttypes=()):
         """Loads a file from an url using urllib2
-        
+
         You can use contenttypes to restrict uploaded content types like:
             ('image',) for all image content types
             ('image/jpeg', 'image/png') only jpeg and png
-        
+
         May raise an urllib2.URLError based exception or InvalidContentType
-        
+
         returns file_handler, mimetype, filename, size_in_bytes
         """
         fh = urllib2.urlopen(url)
-        
+
         info = fh.info()
         mimetype = info.get('content-type', 'application/octetstream')
         size = info.get('content-length', None)
-        
+
         # scheme, netloc, path, parameters, query, fragment
         path = urlparse.urlparse(fh.geturl())[2]
         if path.endswith('/'):
@@ -530,7 +524,7 @@ class ATCTFileContent(ATCTContent):
         else:
             pos = -1
         filename = path.split('/')[pos]
-        
+
         success = False
         for ct in contenttypes:
             if ct.find('/') == -1:
@@ -545,7 +539,7 @@ class ATCTFileContent(ATCTContent):
             success = True
         if not success:
             raise InvalidContentType, mimetype
-        
+
         return fh, mimetype, filename, size
 
     security.declareProtected(ATCTPermissions.UploadViaURL, 'setUploadURL')
@@ -571,7 +565,7 @@ InitializeClass(ATCTFileContent)
 
 class ATCTFolder(ATCTMixin, BaseFolder):
     """Base class for folderish AT Content Types (but not for folders)
-    
+
     DO NOT USE this base class for folders but only for folderish objects like
     AT Topic. It doesn't support constrain types!
     """
@@ -681,7 +675,7 @@ class ATCTOrderedFolder(ATCTFolderMixin, OrderedBaseFolder):
            return ReplaceableWrapper(aq_base(_target).__of__(self))
        else:
            return OrderedBaseFolder.index_html(self)
-       
+
     index_html = ComputedAttribute(index_html, 1)
 
     def __browser_default__(self, request):
