@@ -1,6 +1,10 @@
 1.0-devel
 =====================
 
+ * Fixed http://members.plone.org/collector/3804 added validation of filename
+   when appropriate using check_id if available.
+   [alecm]
+
  * Added index for relatedItems, and migration to install it into already
    installed instances.
    [alecm]
